style.css
/* ... */
@media screen and (min-width: 640px){
	/* Project Thumnails */	
	.item {
		float: left;
		width: 500px;
		margin-left: auto;
		margin-right: auto;

	}
	.img-thumb{
		width: 500px;
		height: 320px;
	}

	/* Blog Post */
	.blog-posts {
		width: 500px;
		height: 450px;
		margin: 30px 0px;
	}
	.blog-thumb{
		width: 500px;
		height: 320px;
	}

	/* Tab filters */
	.project-sidebar-elements{
		font-size: 16px;
		width: 120px;
	}

	/* Jumbotron Intro */
	.work-intro-section{
		height: 400px;
	}
	#expertise-title{
		font-size: 62px;
	}
	#expertise-areas{
		font-size: 62px;
	}
	#jumbotron-email{
		font-size: 21px;
		font-weight: 700;
	}
}

@media screen and (min-width: 768px){
	/* Project Thumnails */	
	.item {
		float: left;
		margin: 15px auto;
		width: 500px;
	}
	.img-thumb{
		width: 500px;
		height: 320px;
	}
	/* Top Nav Bar */
	#logo-container {
	      width: 110px;
		  /*display: inherit;*/
		  margin: 0 auto;
		  height: 100%;
		  text-align: center;
	}
	.nav > li > a{
		padding: 0;
		margin: 15px 8px 0px;
	}
	/* Tab filters */
	.project-sidebar-elements{
		width: 120px;
	}
	/*About*/
	.about-title{
		font-size: 42px;
	}
	.contact-title{
		font-size: 42px;
	}

	.home-intro-section{
		height: 400px;
    	line-height: 400px;
	}

	.home-intro-section p {
		width: 500px;
		font-size: 18px;

	}

}

@media screen and (min-width: 992px){
	/* Project Thumnails */	
	.item {
		float: left;
		margin: 15px;
		width: 350px;
	}
	.img-thumb{
		width: 350px;
		height: 224px;
	}	
	
	/* Top Nav Bar */
	.intro{
		min-height: 500px;
		/*max-height: 400px;*/
	}
	.contact-intro{
		min-height: 350px;
		max-height: 450px;
	}
	.nav {
		font-size: 13px;
		margin-left: 5px;		
	}
	/* Blog Post */
	.blog-posts {
		width: 350px;
		height: 400px;
		margin: 30px 15px;
	}
	.blog-thumb{
		width: 350px;
		height: 224px;
	}
	/* Tab filters */
	.project-sidebar-elements{
		width: 120px;
	}
}

@media screen and (min-width: 1200px){
	/* Project Thumnails */
	.item {
		float: left;
		margin: 15px;
		width: 250px;
	}
	.img-thumb{
		width: 250px;
		height: 160px;
	}
	/* Top Nav Bar */
	.nav{
		font-size: 15px;
		margin-left: 10px;
	}

	.home-intro-section{
		height: 500px;
		line-height: 500px;
	}

	.home-intro-section{
		width: 600px;
		font-size: 18px;
	}
	/* Blog Post */
	.blog-posts {
		width: 250px;
		height: 380px;
	}

	.blog-thumb{
		width: 250px;
		height: 160px;
	}
	/* Tab filters */
	.project-sidebar-elements{
		width: 120px;
	}
}

#logo-container span {
  /*background: url(http://www.sanchezmauricio.com/wp-content/uploads/2015/12/logo-container12012015v1.0.svg);  */
  
  font-family: 'CamberLight', 'sans-serif';
  line-height: 50px;
  color: #1f1f1f;
  font-size: 16px;
  display:inline-block;
}
#logo-container div.logo{
	background: url(http://www.sanchezmauricio.com/wp-content/uploads/2017/01/logo-mauriciov2.png);
	background-size: cover;
	width: 18px;
	height: 14px;
	display:inline-block;
}

.intro{
	width: 100%;
	margin-left: auto;
	margin-right: auto;
	margin-bottom: 0px;
	background-color: white;
}

#title { 
	float: left;
	clear: left;
	font-size: 10px;
	margin: 0;
	margin-top: -5px;
}

/*
.header-mauricio{
	border:none;
	margin-bottom: 200px;
	height: 30px;
	padding-right: 15px;
	top: 0;
	background: white;
}
*/

.thumb-title {
	width: 100%;
}

/* Nav Bar Menu */
a {
text-decoration: none;
transition-property: border color;
-webkit-transition-duration: 0.3s;
-moz-transition-duration: 0.3s;
-o-transition-duration: 0.3s;
transition-duration: 0.3s;
color: #4999c1;
}

.page-item-a:hover {
    border-bottom: 2px solid rgba(255, 255, 255, 1);
    color: white;
}

.navbar-default .navbar-nav  li  a {
    color: white;
    margin-left: 20px
}

.current_page_item > a{
	border-bottom: 2px solid rgba(255, 255, 255, 1);
	border-color: #b6d450;
    color: #b6d450 !important;
}

/*
/
Hamburguer Menu
/ 
*/

.navbar-default .navbar-toggle .icon-bar {
    background-color: #1f1f1f;
}

.navbar-default .navbar-toggle, .navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus  {
    border-color: transparent;
    background: transparent;
}
.navbar-toggle {
  display: block;
  float: left;
  position: absolute;
  left: 5px;
  border-color: transparent;
  color: #1f1f1f;
}

.navbar-nav>li {
  float: none;
}

.left-slide{
	width: 0;
	top:48px;
	bottom:0;
	left:0;	
	position:fixed;
	overflow:hidden;
	transition:width .4s;
	background: #1f1f1f;
	border-top: 1px solid transparent;
    border-color: #e7e7e7;

}

.left-slide.left{
	width:200px;
}

.home-intro-section {
	/*height: 500px;*/
	/*line-height: 500px;*/
	text-align: center;
}

.home-intro-section p {
	display: inline-block;
	line-height: normal;
	vertical-align: middle;
	/*width: 600px;*/
	/*font-size: 20px;*/
	text-align: -webkit-auto;
	color: #1f1f1f;
}

.home-intro-section p a {
	text-decoration: underline;
    color: black;
    font-weight: 500;
}

.intro-section{
	/*padding-left: 30px;*/
}

/*---------------------This is for the body Landing page -----------------------*/ 

.custom-row{
	float: left;
	/*we need this for mobile*/
	margin-left: auto;
	margin-right: auto;
	padding-bottom: 240px;
}

#sidebar{
	text-align: center;
	background-color: #eeeeee;
	margin-bottom: 50px;
}

#container{
	list-style-type: none;
}

.project-sidebar-title{
	display: none;
}

/* this is for the filter buttons */
.project-sidebar-elements{
	list-style-type: none;
	display: inline-block;
	
    background: none;    
    border-style: none;
    border-width: 2px;    
    padding: 5px 0px;
    font-weight: 200;
    
}

.project-sidebar-elements:visited{
	
}	

/* filter menu for small screens */
@media (max-width: 480px){
	.project-sidebar-elements{
	    background: none;
	    border-style: none;
	    border-width: 2px;
	    padding: 2px 0px;
	   	font-weight: 200;
	}	
}

/* when selected we change the look of the button */
.is-checked {
	background: white !important; 
	color: #101010;
	font-weight: 700;
}
/* ... */

